[gd_scene load_steps=21 format=3 uid="uid://eb0mqkobwsnn"]

[ext_resource type="Script" uid="uid://b3mkhon5v6ukl" path="res://scenes/gameManagement/inGame.gd" id="1_27h4a"]
[ext_resource type="PackedScene" uid="uid://begsm8mhsqea2" path="res://scenes/follower/ThrownObject.tscn" id="2_vwfvy"]
[ext_resource type="PackedScene" uid="uid://b172ae4cqawdl" path="res://scenes/ui/SplashText.tscn" id="3_s70h5"]
[ext_resource type="PackedScene" uid="uid://5i0c13y6xquo" path="res://Maps/Level1DRAFT.tscn" id="4_q3n58"]
[ext_resource type="PackedScene" uid="uid://ca8kwae33nfxd" path="res://scenes/player/Player.tscn" id="7_b6xl3"]
[ext_resource type="PackedScene" uid="uid://c5s1pf53yirhm" path="res://scenes/maps/Goal.tscn" id="10_27h4a"]
[ext_resource type="PackedScene" uid="uid://bwcpcthxmi484" path="res://scenes/ui/UI.tscn" id="10_s70h5"]
[ext_resource type="PackedScene" uid="uid://bmkn1mud67i5y" path="res://scenes/ui/help.tscn" id="10_vwfvy"]
[ext_resource type="Script" uid="uid://bey0d3rbrvjdy" path="res://scenes/ui/ui.gd" id="11_vwfvy"]
[ext_resource type="PackedScene" uid="uid://xgdjf4ckqdf3" path="res://scenes/enemy/ModifiedPatrolPath.tscn" id="12_8wgn8"]
[ext_resource type="PackedScene" uid="uid://befrucnlp0dvr" path="res://scenes/items/Spawners/Apple_spawner.tscn" id="12_fg4jm"]
[ext_resource type="PackedScene" uid="uid://xrtvxf74yob8" path="res://scenes/gameManagement/settings.tscn" id="12_s70h5"]
[ext_resource type="PackedScene" uid="uid://doqc1gqfip2ts" path="res://scenes/items/plant_spawner.tscn" id="12_v6clt"]
[ext_resource type="PackedScene" uid="uid://eqeld234bmto" path="res://scenes/items/fruits/fish.tscn" id="13_1vlao"]

[sub_resource type="Curve2D" id="Curve2D_q3n58"]
_data = {
"points": PackedVector2Array(-179.87738, -214.5187, 179.87738, 214.5187, -115, 333, -177.17535, 133.78397, 177.17535, -133.78397, 397, 399, 184.57051, 170.81552, -184.57051, -170.81552, 442, -139, 182.5995, -162.05707, -182.5995, 162.05707, -39, -94, 0, 0, 0, 0, -115, 333)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_8wgn8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 202, -4, 168.05739, 156.05328, -168.05739, -156.05328, 125, -280, 169.77226, -8.574356, -169.77226, 8.574356, -213, -299, -6.859485, -183.49123, 6.859485, 183.49123, -664, -40, 0, 0, 0, 0, -483, 87, 0, 0, 0, 0, 202, -4)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_fg4jm"]
_data = {
"points": PackedVector2Array(-60.020496, -276.09427, 60.020496, 276.09427, 770, -147, 75.45434, 39.44204, -75.45434, -39.44204, 515, 147, 139.02464, -207.49945, -139.02464, 207.49945, 256, 323, -336.1491, -242.77437, 336.1491, 242.77437, -93, 581, 0, 0, 0, 0, -78, 18, 0, 0, 0, 0, -143, -140)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_v6clt"]
bake_interval = 2.0
_data = {
"points": PackedVector2Array(-292.24667, 33.82787, 292.24667, -33.82787, -406, -216, -589.37195, -33.417995, 589.37195, 33.417995, 727, -61, -221.4156, -104.19557, 221.4156, 104.19557, 2966, 0, 255.87749, -164.35803, -255.87749, 164.35803, 2327, 1071, 0, 0, 0, 0, 2153, 959, 273.99283, 4.8927293, -273.99283, -4.8927293, 1477, 919, 146.78188, 68.49821, -146.78188, -68.49821, 895, 902, 0, 0, 0, 0, 156, 951, -414.9989, 261.4493, 414.9989, -261.4493, -406, -216)
}
point_count = 9

[sub_resource type="Curve2D" id="Curve2D_1vlao"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, -11, 0, 0, 0, 0, 623, 205)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_ctmcs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 318, 55, 0, 0, 0, 0, -299, -191)
}
point_count = 2

[node name="In Game" type="Node2D" node_paths=PackedStringArray("goal", "player")]
texture_filter = 1
script = ExtResource("1_27h4a")
thown = ExtResource("2_vwfvy")
splashText = ExtResource("3_s70h5")
goal = NodePath("goal")
player = NodePath("Player")

[node name="NavigationRegion2D" parent="." instance=ExtResource("4_q3n58")]

[node name="Help" parent="." instance=ExtResource("10_vwfvy")]
offset_left = -766.0
offset_top = 1148.0
offset_right = -726.0
offset_bottom = 1188.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" parent="." instance=ExtResource("7_b6xl3")]
position = Vector2(-153, 1052)

[node name="goal" parent="." instance=ExtResource("10_27h4a")]
position = Vector2(57, 1020)

[node name="UI" parent="." instance=ExtResource("10_s70h5")]
visible = false
script = ExtResource("11_vwfvy")

[node name="Control" parent="UI" index="0"]
offset_left = -960.0
offset_top = -540.0
offset_right = 1273.0
offset_bottom = 711.0

[node name="Settings" parent="UI/Control" index="1" instance=ExtResource("12_s70h5")]
visible = false
layout_mode = 0

[node name="Enemy Paths" type="Node2D" parent="."]

[node name="EnemyPath2" parent="Enemy Paths" instance=ExtResource("12_8wgn8")]
position = Vector2(-1822, -156)
curve = SubResource("Curve2D_q3n58")

[node name="Path2D" parent="Enemy Paths" instance=ExtResource("12_8wgn8")]
position = Vector2(-110, 115)
curve = SubResource("Curve2D_8wgn8")

[node name="EnemyPath" parent="Enemy Paths" instance=ExtResource("12_8wgn8")]
position = Vector2(-1103, -1360)
curve = SubResource("Curve2D_fg4jm")

[node name="EnemyPath3" parent="Enemy Paths" instance=ExtResource("12_8wgn8")]
position = Vector2(-1511, -1855)
curve = SubResource("Curve2D_v6clt")

[node name="EnemyPath4" parent="Enemy Paths" instance=ExtResource("12_8wgn8")]
position = Vector2(-1723, 1226)
curve = SubResource("Curve2D_1vlao")

[node name="EnemyPath5" parent="Enemy Paths" instance=ExtResource("12_8wgn8")]
position = Vector2(-1420, 1693)
curve = SubResource("Curve2D_ctmcs")

[node name="Fruits" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Fruits"]

[node name="Plant Spawner2" parent="Fruits/Node2D" instance=ExtResource("12_v6clt")]
position = Vector2(738, 511)
item = ExtResource("13_1vlao")

[node name="Plant Spawner" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(-1629, 5)
item = ExtResource("13_1vlao")

[node name="Plant Spawner3" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(260, -41)

[node name="Plant Spawner4" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(-368, 866)

[node name="Plant Spawner5" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(-95, 735)

[node name="Plant Spawner6" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(92, 553)

[node name="Plant Spawner12" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(-1220, -990)

[node name="Plant Spawner11" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(-1204, -1093)

[node name="Plant Spawner10" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(-1167, -997)

[node name="Plant Spawner8" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(-95, 909)

[node name="Apple Spawner5" parent="Fruits/Node2D" instance=ExtResource("12_fg4jm")]
position = Vector2(-283, 1065)

[connection signal="playerDies" from="Player" to="UI/Control/Label" method="_on_player_player_dies"]
[connection signal="throwMade" from="Player/Radii/Throw Radius" to="." method="onThrowMade"]
[connection signal="pressed" from="UI/Control/Settings/Resume" to="." method="_onResume"]
[connection signal="pressed" from="UI/Control/Settings/Quit" to="." method="_onQuit"]

[editable path="Player"]
[editable path="UI"]
[editable path="UI/Control/Settings"]
